[tool.poetry]
name = "knowledge_setting"
version = "0.1.0"
description = ""
authors = ["ahenderson"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
networkx = "^3.0"
decorator = "^5.1.1"
lark-parser = "^0.12.0"
watchdog = "^2.3.0"
pyaml = "^21.10.1"
matplotlib = "^3.7.0"
mwxml = "^0.3.3"
lark = "^1.1.9"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
starlette = "^0.37.2"
scipy = "^1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
